Add MaximumIntegrity to the rover
